--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ kramdown:
     math_engine: mathjax
     input: GFM
     syntax_highlighter: rouge
-remote_theme: pmarsceill/just-the-docs
 theme: just-the-docs
 search_enabled: true
+exclude: ["*.json", "*.csv", "*.ipynb", "*.pdf", "papers/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
 aux_links:
-"SpotifYou on GitHub":
-    - "//github.com/gzgracez/CS-109A-Final-Project"
+  "SpotifYou on GitHub":
+      - "//github.com/gzgracez/CS-109A-Final-Project"
