--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,4 @@
-theme: progress-for-jekyll #jekyll-theme-primer
+theme: jekyll-theme-primer
 title: Spotify You
 description: Generate YOUR Spotify playlist
 baseurl:
@@ -7,7 +7,7 @@ kramdown:
     math_engine: mathjax
     input: GFM
     syntax_highlighter: rouge
-#remote_theme: pmarsceill/just-the-docs
+remote_theme: pmarsceill/just-the-docs
 search_enabled: true
 exclude: ["*.json", "*.csv", "*.ipynb", "*.pdf", "papers/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
 aux_links:
