--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,7 +7,7 @@ kramdown:
     math_engine: mathjax
     input: GFM
     syntax_highlighter: rouge
-remote_theme: pmarsceill/just-the-docs
+remote_theme: alexanderussell/progress-for-jekyll/ #pmarsceill/just-the-docs
 search_enabled: true
 exclude: ["*.json", "*.csv", "*.ipynb", "*.pdf", "papers/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
 aux_links:
